<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.adivery.sdk.AdiveryNativeAdView
        android:id="@+id/native_ad_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:placement_id="@string/nativeBanner"
        android:elevation="10dp"
        app:adivery_native_ad_layout="@layout/adivery_native_ad_layout"
        android:visibility="invisible"
        />
    <FrameLayout
        android:id="@+id/all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <FrameLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_game">

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:lines="1"
                android:text="@string/score"
                android:fontFamily="@font/font"
                android:textColor="#FD1706"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:lines="1"
                android:text="@string/time"
                android:fontFamily="@font/font"
                android:textColor="#FD1706"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/monster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/mess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#80000000"
                android:gravity="center"
                android:lines="1"
                android:fontFamily="@font/font"
                android:text="@string/complete"
                android:textColor="#FD1706"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:padding="@dimen/_10sdp" >



            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal|top"
                android:layout_weight="1"
                android:orientation="horizontal" >









                    <ImageView
                        android:id="@+id/btn_sound"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"

                        android:src="@drawable/btn_sound_on"
                        android:onClick="onClick"
                         />



                    <ImageView
                        android:id="@+id/btn_start"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/btn_play"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:onClick="onClick"
                         />
                <ImageView
                    android:id="@+id/btn_rate"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"

                    android:src="@drawable/btn_rate"
                    android:onClick="rate"
                    />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_game"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:text="@string/score"
                android:fontFamily="@font/font"
                android:textColor="#FD1706"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_high_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center|top"
                android:fontFamily="@font/font"
                android:text="@string/high_score"
                android:textColor="#FD1706"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/btn_home"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:onClick="onClick"
                    android:src="@drawable/btn_home"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />

                <ImageView
                    android:id="@+id/btn_start2"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/btn_again"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:onClick="onClick"
                    />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>